[metadata]
name = pycudadecon
version = 0.0.11
url = https://github.com/tlambert03/pycudadecon
download_url = https://github.com/tlambert03/pycudadecon
license = MIT license
license_file = LICENSE
description = Python wrapper for CUDA-accelerated 3D deconvolution
long_description = file: README.md
long_description_content_type = text/markdown
author = Talley Lambert
author_email = talley.lambert@gmail.com
keywords = deconvolution, microscopy, CUDA
project_urls =
    Documentation = https://pycudadecon.readthedocs.io/en/latest/
    Source = https://github.com/tlambert03/pycudadecon
    Tracker = https://github.com/tlambert03/pycudadecon/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Environment :: GPU :: NVIDIA CUDA
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering


[options]
packages = find:
python_requires = >=3.7
setup_requires =
  setuptools_scm
install_requires =
    numpy
    tifffile
    typing_extensions

[options.entry_points]
napari.plugin =
    pycudadecon = pycudadecon.napari


[options.extras_require]
testing =
    pytest
dev =
    ipython
    black
    flake8
    isort
    mypy
    pre-commit
    %(testing)s


[flake8]
exclude = docs,_version.py,.eggs,examples
max-line-length = 88
docstring-convention = numpy
ignore =  D100, D213, D401, D413, D107, W503


[mypy]
files = pycudadecon
warn_unused_configs = True
warn_unused_ignores = True
check_untyped_defs = True
implicit_reexport = False
# this is strict!
# disallow_untyped_defs = True
show_column_numbers = True
show_error_codes = True
ignore_missing_imports = True
# pretty = True


[isort]
profile = black
src_paths = pycudadecon
