[metadata]
name = pycudadecon
version = 0.0.11
description = Python wrapper for CUDA-accelerated 3D deconvolution
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tlambert03/pycudadecon
author = Talley Lambert
author_email = talley.lambert@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: GPU :: NVIDIA CUDA
    Framework :: napari
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
download_url = https://github.com/tlambert03/pycudadecon
keywords = deconvolution, microscopy, CUDA
project_urls =
    Documentation = https://pycudadecon.readthedocs.io/en/latest/
    Source = https://github.com/tlambert03/pycudadecon
    Tracker = https://github.com/tlambert03/pycudadecon/issues

[options]
packages = find:
install_requires =
    numpy
    tifffile
    typing_extensions
python_requires = >=3.7
setup_requires =
    setuptools_scm

[options.entry_points]
napari.plugin =
    pycudadecon = pycudadecon.napari

[options.extras_require]
dev =
    black
    flake8
    ipython
    isort
    mypy
    pre-commit
testing =
    pytest

[flake8]
exclude = docs,_version.py,.eggs,examples
max-line-length = 88
docstring-convention = numpy
ignore = D100, D213, D401, D413, D107, W503

[mypy]
files = pycudadecon
warn_unused_configs = True
warn_unused_ignores = True
check_untyped_defs = True
implicit_reexport = False
show_column_numbers = True
show_error_codes = True
ignore_missing_imports = True

[isort]
profile = black
src_paths = pycudadecon
